--- a/apps/frontend/app.json
+++ b/apps/frontend/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Apps",
-    "slug": "apps",
+    "name": "Frontend",
+    "slug": "frontend",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
