--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "apps",
+  "name": "frontend",
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "eas-build-post-install": "cd ../ && node tools/scripts/eas-build-post-install.mjs . apps"
+    "eas-build-post-install": "cd ../../ && node tools/scripts/eas-build-post-install.mjs . apps/frontend"
   },
   "dependencies": {
     "@testing-library/jest-native": "*",
