--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "expo-status-bar": "~2.0.0",
     "react": "~18.3.1",
     "react-dom": "~18.3.1",
-    "react-native": "0.76.3",
+    "react-native": "^0.76.9",
     "react-native-svg": "~15.8.0",
     "react-native-svg-transformer": "~1.5.0",
     "react-native-web": "~0.19.13"
@@ -28,9 +28,10 @@
     "@swc/helpers": "~0.5.11",
     "@types/react": "~18.3.12",
     "babel-preset-expo": "~12.0.1",
-    "nx": "^21.3.11",
+    "nx": "21.3.11",
     "prettier": "^2.6.2",
     "tslib": "^2.3.0",
     "typescript": "~5.8.2"
-  }
+  },
+  "nx": {}
 }
