--- a/package.json
+++ b/package.json
@@ -7,15 +7,26 @@
   "dependencies": {
     "@expo/metro-config": "~0.19.4",
     "@expo/metro-runtime": "~4.0.0",
+    "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-navigation/bottom-tabs": "^7.4.5",
+    "@react-navigation/native": "^7.1.17",
+    "@react-navigation/stack": "^7.4.5",
     "empty": "0.10.1",
     "expo": "~52.0.11",
     "expo-splash-screen": "~0.29.13",
     "expo-status-bar": "~2.0.0",
+    "lucide-react-native": "^0.536.0",
     "react": "~18.3.1",
     "react-dom": "~18.3.1",
     "react-native": "^0.76.9",
+    "react-native-gesture-handler": "^2.27.2",
+    "react-native-reanimated": "^4.0.1",
+    "react-native-safe-area-context": "^5.5.2",
+    "react-native-screens": "^4.13.1",
     "react-native-svg": "~15.8.0",
     "react-native-svg-transformer": "~1.5.0",
+    "react-native-vector-icons": "^10.3.0",
     "react-native-web": "~0.19.13"
   },
   "devDependencies": {
