--- a/apps/frontend/app.json
+++ b/apps/frontend/app.json
@@ -4,6 +4,7 @@
     "slug": "frontend",
     "version": "1.0.0",
     "orientation": "portrait",
+        "newArchEnabled": true,
     "icon": "./assets/icon.png",
     "splash": {
       "image": "./assets/splash.png",
