--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo": "~52.0.11",
     "expo-splash-screen": "~0.29.13",
     "expo-status-bar": "~2.0.0",
+    "firebase": "^12.1.0",
     "lucide-react-native": "^0.536.0",
     "react": "~18.3.1",
     "react-dom": "~18.3.1",
